# wearefighters

./: .dockerignore  .gitignore  Dockerfile  Meta Hackathon Problem Statement.txt  PROJECT_SELECTION.md  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
scripts/: run_baseline.py
server/: app.py  environment.py  requirements.txt
support_triage_env/: __init__.py  client.py  compat.py  graders.py  models.py  tasks.py
support_triage_env/data/: tasks.json
support_triage_env/server/: Dockerfile  app.py  environment.py
