[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support-triage-env"
version = "0.1.0"
description = "OpenEnv-style customer support ticket triage environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "openai>=1.30.0",
  "pydantic>=2.6.0",
  "PyYAML>=6.0.1",
  "requests>=2.31.0",
  "uvicorn[standard]>=0.29.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["support_triage_env*"]

[tool.setuptools.package-data]
support_triage_env = ["data/*.json"]

